web/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: eshop-namespace
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
