web/kubernetes/statefulset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-database
spec:
  selector:
    app: postgresql-db
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30080
      protocol: TCP
